--- a/main.html
+++ b/main.html
@@ -10,9 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>Shaw's News</h1>
+	<header>
+		<h2>Shaw's News</h2>
+	</header>
 	<section class="group"id="sec-1">
-			<h2>Latest News Articles</h2>
+			<h3>Latest News Articles</h3>
 		<ul>
 			<li>Article 1</li>
 			<li>Article 2</li>
@@ -21,7 +23,7 @@
 	</section>
 
 	<section class="group">
-		<h2>Main Article</h2>
+		<h3>Main Article</h3>
 		<p>Lorem ipsum dolor sit amet,consectetur adipiscing elit. Sed auctor,
 		magna ey fringilla malesuada ipsum risus eleifend est, non feugiat
 		quam augue eusimod eros. Sed malesuada magna eu fringilla malesuada, ipsum
@@ -29,7 +31,7 @@
 	</section>
 
 	<section class="group">
-		<h2>Pictorial News</h2>
+		<h3>Pictorial News</h3>
 		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"alt="image-1">
 		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="image-2">
 		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="image-3">
